try to fix menu on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,14 +7,11 @@
   font:-apple-system-body;
 }
 @supports (font:-apple-system-body) and (not(-webkit-touch-callout:default)){
-:root{font-size:14px}
+:root{font-size:16px}
 }
 
 html {
   font-size: 12px;
-  @include mobile {
-    font-size: 12px;
-  }
   @include tablet {
     font-size: 16px;
   }
@@ -23,7 +20,11 @@ html {
   }
 }
 
-
+@media (max-width: 480px) {
+   html {
+        font-size: 14px;
+    }
+}
 
 body {
     background-size: cover;
